--- a/firstapp/templates/firstapp/contactus.html
+++ b/firstapp/templates/firstapp/contactus.html
@@ -7,7 +7,8 @@
 
 {% block body%}
 <div class="container">
-<form method="POST">{% csrf_token %}
+<form method="POST">
+    {% csrf_token %}
 <div class="mb-3">
   <label for="name" class="form-label">Name</label>
   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name">
