--- a/firstapp/templates/firstapp/basic.html
+++ b/firstapp/templates/firstapp/basic.html
@@ -40,10 +40,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'firstapp:index'%}">Home</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'index'%}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'firstapp:contact'%}">Contact us</a>
+              <a class="nav-link" href="{% url 'contactclass'%}">Contact us</a>
             </li>
             <li class="nav-item dropdown">
               <a
