--- a/seller/templates/seller/index.html
+++ b/seller/templates/seller/index.html
@@ -1,4 +1,4 @@
-{% extends 'firstapp/basic.html' %}
+{% extends 'seller/basic.html' %}
 {% load static %}
 {% block title %}
 {% endblock %}
@@ -125,10 +125,6 @@
 <main>
     Hello World!
 
-<h1>{{request.session.test}}</h1>
-{% if user.is_authenticated %}
-<h1>{{user.name}}</h1>
-{% endif %}
 {{age}}
 {{array}}
 {% for i in array %}
